# casadi-test

./: CMakeLists.txt  README.md  main.cpp  main_simple.cpp
